# konnektoren-web-game

./: .gitignore  16e617ae34ed8ea1-initializer.mjs  38f03240af981232-initializer.mjs  404.html  4966536bb8db5d1b-initializer.mjs  8478f79b490c5a34-initializer.mjs  CNAME  Cargo.toml  README.adoc  README.md  Trunk.toml  _headers  _redirects  _routes.json  atom.xml  b2f6d39856d2501b-initializer.mjs  build.rs  index-2b3670ab437384c6.css  index-39bba20be5b1646c.css  index-3ae79d3a70892028.css  index-49c9aba5693e0074.css  index-4cbb465875b5a0c7.css  index-4ce25036d0597e78.css  index-5c544447c86ddb00.css  index-7ee7ab393e39fcd2.css  index-93a4fc273b1447d7.css  index-a07a03d75397dba3.css  index-b777aeba207a51fc.css  index-d170cbb4714510b1.css  index-e82d2428bd5c3888.css  index-eccbaa6c715dedf3.css  index-f7810c8d7416e1d2.css  index.html  index.html.template  indexnow_key.txt  justfile  konnektoren-web-game-pwa-187908fda07b6b4.js  konnektoren-web-game-pwa-1eb37bbcc5daa278.js  konnektoren-web-game-pwa-220b87e98b460508.js  konnektoren-web-game-pwa-300e3dc42cf9a91f.js  (+74 more)
.github/workflows/: deploy.yml  gh-pages.yml  i18n.yml
about/: index.html
achievements/: index.html
assets/: inbox.yml  initializer.mjs  main-tour.yml  map-tour.yml  tonconnect-manifest.json
assets/challenges/: articles.yml  articles_info.yml  connectives_info.yml  custom_articles.yml  custom_casus.yml  custom_group_of_nouns.yml  custom_haupt_neben_satze.yml  custom_interrogative_particles.yml  custom_modalverben.yml  custom_past_tenses.yml  custom_verbs_mit_dativ_accusativ.yml  custom_verbs_prepositions.yml  konnektoren.yml  level_a2.yml  level_c1.yml  negation.yml  personal_pronouns_info.yml  reflexivpronouns.yml  verben-mit-prapositionen-pkg.yml
assets/i18n/: ar.json  cn.json  de.json  en.json  es.json  pl.json  tr.json  ua.json  vi.json
assets/info/: articles-de.md  articles-tr.md  articles-vi.md  articles.md  connectives-de.md  connectives-tr.md  connectives-ua.md  connectives-vi.md  connectives.md  personalpronouns-tr.md  personalpronouns.md  reflexivpronouns-tr.md  reflexivpronouns-ua.md  reflexivpronouns-vi.md  reflexivpronouns.md
backup/: index.html
challenge/articles-3/: index.html
challenge/articles-5/: index.html
challenge/articles-6/: index.html
challenge/custom-articles-1/: index.html
challenge/custom-casus/: index.html
challenge/custom-group-of-nouns/: index.html
challenge/custom-perfect_tense-1/: index.html
challenge/custom-zeitangaben/: index.html
challenge/custom_verbs_prepositions/: index.html
challenge/konnektoren-1/: index.html
challenge/konnektoren-2/: index.html
challenge/konnektoren-3/: index.html
challenge/konnektoren-5/: index.html
challenge/personal_pronouns-1/: index.html
challenge/reflexivpronoun-1/: index.html
challenge/verbs_mit_dativ_akkusativ/: index.html
challenge_packages/articles-pkg/: index.js
challenge_packages/modal-pkg/: challenge.yml  config.yml  i18n.yml  index.css  index.html  index.js  results.html
challenge_packages/verben-mit-prapositionen-pkg/: challenge.yml  config.yml  i18n.yml  index.css  index.html  index.js  results.html
challenges/: index.html
docs/: deployment.adoc  developer.adoc  pre_launch_checklist.adoc  repositories.adoc
leaderboard/: index.html
map/: index.html
marketplace/: index.html
profile/: index.html
routing/: Cargo.toml
routing/src/: app.rs  initializer.mjs  lib.rs  loading.rs  main_app.rs  route.rs  routing_app.rs  switch.rs
routing/src/pages/: mod.rs  welcome.rs
scripts/: generate_challenge_packages.sh  generate_index.sh  generate_pages_index.sh  generate_sitemap.sh  i18n_report.sh  indexnow_submit.sh
session/new/: index.html
src/: app.rs  config.rs  lib.rs  route.rs
src/assets/: achievements.yml  inbox.yml  initializer.mjs  main-tour.yml  product_catalog.yml
src/components/: achievement_inbox_updater.rs  badge.rs  chat.rs  emojis.rs  feedback_popup.rs  footer.rs  google_drive_sessions.rs  google_oauth.rs  inbox.rs  leaderboard.rs  map.rs  mod.rs  navigation.rs  payment.rs  roulette.rs  select_language.rs  sidenav.rs  social_links.rs  speech_bubble.rs  theme_toggle.rs  tour.rs  tour_button.rs  tour_toggle.rs  verifiable_credential.rs  vibrate_effect.rs
src/model/: certificate_storage.rs  challenge_loader.rs  challenge_types.rs  challenge_types_repository.rs  game_loader.rs  inbox.rs  level_loader.rs  loader_error.rs  mod.rs  product_repository.rs  session_initializer_impl.rs  web_session.rs
src/pages/: about.rs  achievements.rs  backup.rs  challenge.rs  challenges.rs  home.rs  leaderboard.rs  map.rs  marketplace.rs  mod.rs  not_found.rs  preview.rs  profile.rs  results.rs  session.rs  settings.rs
src/repository/: certificate_repository.rs  challenge_types_repository.rs  inbox_repository.rs  local_storage.rs  memory_storage.rs  mod.rs  settings_repository.rs  storage.rs  storage_error.rs
src/utils/: mod.rs  points.rs  seo.rs  session.rs
styles/: _index.scss  index.scss  justfile  loading.scss  styles.scss
styles/abstracts/: _accessibility.scss  _breakpoints.scss  _colors.scss  _elevation.scss  _index.scss  _mixins.scss  _motion.scss  _themes.scss  _type.scss  _variables.scss
styles/atoms/: _animations.scss  _badge.scss  _button.scss  _buttons.scss  _card.scss  _form-controls.scss  _grid.scss  _icon.scss  _index.scss  _input.scss  _spinner.scss  _table.scss  _text.scss  _typography.scss
styles/base/: _base.scss  _global.scss  _index.scss
styles/components/: _achievement.scss  _achievements.scss  _badge.scss  _button.scss  _cart_badge.scss  _certificate.scss  _certificate_image.scss  _challenge.scss  _challenge_actions.scss  _chat.scss  (+47 more)
(+216 files in other folders)
