[package]
name = "konnektoren-web-game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "konnektoren-web-game-pwa"
path = "src/bin/main.rs"

[features]
default = []
yew-preview = ["dep:yew-preview", "konnektoren-yew/yew-preview"]

[dependencies]
console_log = "1.0.0"
gloo = { version = "0.11.0", features = ["storage", "timers"] }
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Window", "DomTokenList"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-i18n = "0.1.2"
yew-router = { version = "0.18.0" }
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false, features = ["certificates"] }
konnektoren-yew = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false, features = [
    "effects", "music", "storage", "certificates"] }
yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = ["markdown", "storage"] }
yew-preview = { git = "https://github.com/chriamue/yew-preview", optional = true }
serde_yaml = "0.9.33"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
reqwest = { version = "0.12.5", features = ["json"] }
itertools = "0.12.1"
strsim = "0.11.1"
rand = "0.9.0-alpha.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"