[package]
name = "konnektoren-web-game"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "konnektoren-web-game-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "konnektoren-web-game-pwa"
path = "src/bin/main.rs"

[features]
default = ["backup"]
yew-preview = ["dep:yew-preview", "konnektoren-yew/yew-preview"]
backup = ["routing/backup", "gloo/file"]

[dependencies]
async-trait = "0.1.82"
console_log = "1.0.0"
yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
    "yew",
], default-features = false }
gloo = { workspace = true, features = ["storage", "timers"] }
js-sys = "0.3.72"
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
web-sys = { workspace = true, features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlMetaElement",
    "Window",
    "DomTokenList",
] }
yew-i18n = "0.1.2"
yew = { workspace = true }
yew-router = { workspace = true }
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false, features = [
    "certificates",
    "marketplace",
    "js",
] }
konnektoren-yew = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false, features = [
    "effects",
    "marketplace",
    "music",
    "storage",
    "certificates",
    "gdrive",
] }
konnekt-session = { git = "https://github.com/konnektoren/konnekt-session", features = [
    "yew",
] }
yew-tou-rs = { git = "https://github.com/chriamue/yew-tou-rs/", branch = "main", features = [
    "markdown",
] }
yew-preview = { git = "https://github.com/chriamue/yew-preview", optional = true }
serde_yaml = "0.9.33"
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
reqwest = { version = "0.12.5", features = ["json"] }
itertools = "0.13.0"
strsim = "0.11.1"
rand = "0.8.5"
urlencoding = { workspace = true }
qrcodegen = "1.0.0"
chrono = "0.4.38"
thiserror = "1.0"
routing = { path = "routing" }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
tokio = { version = "1.0", features = ["rt", "macros"] }

[workspace]
members = ["routing"]

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = "0.3"
yew-router = "0.18"
urlencoding = "2.1.3"
gloo = { version = "0.11.0" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
log = "0.4.21"
